#2026 Layout issue in justify form groups
* review verbeteringen

--- a/packages/dso-toolkit/src/components/justify-form-groups/justify-form-groups.scss
+++ b/packages/dso-toolkit/src/components/justify-form-groups/justify-form-groups.scss
@@ -7,7 +7,7 @@
   gap: units.$u2;
 
   .form-group {
-    display: initial;
+    display: block;
     margin-bottom: 0;
 
     + .form-group,
